# voidasciimate

./: CMakeLists.txt  README.md  fonttest
src/: main.c
src/animation/: circle.c  circle.h  lines.c  lines.h  random.c  random.h  top-down.c  top-down.h
src/figlet/: figlet-info.c  figlet-info.h  figlet.c  figlet.h
src/macros/: array.h
test/: main.c  voidasciimate-suite.c  voidasciimate-suite.h
