CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(voidasciimate)

SET(ASCIIMATE_ROOT_PATH ${PROJECT_SOURCE_DIR})
SET(ASCIIMATE_SOURCE_PATH ${ASCIIMATE_ROOT_PATH}/src)
SET(ASCIIMATE_TEST_SOURCE_PATH ${ASCIIMATE_ROOT_PATH}/test)
SET(ASCIIMATE_BIN_PATH ${PROJECT_BINARY_DIR}/bin)
# SET(ASCIIMATE_TEST_EXEC_NAME voidasciimate_test)
SET(ASCIIMATE_EXEC_NAME voidasciimate)

SET(EXECUTABLE_OUTPUT_PATH ${ASCIIMATE_BIN_PATH})

FILE(GLOB_RECURSE ASCIIMATE_SOURCE_FILES ${ASCIIMATE_SOURCE_PATH}/*.c)
# FILE(GLOB_RECURSE ASCIIMATE_TEST_SOURCE_FILES ${ASCIIMATE_TEST_SOURCE_PATH}/*.c)
# SET(ASCIIMATE_TEST_SOURCE_FILES ${ASCIIMATE_TEST_SOURCE_FILES} ${ASCIIMATE_SOURCE_FILES})
# LIST("${ASCIIMATE_TEST_SOURCE_FILES}" REMOVE "${ASCIIMATE_SOURCE_PATH}/main.c")

SET(CMAKE_C_FLAGS "-g -Wall")

ADD_EXECUTABLE(${ASCIIMATE_EXEC_NAME} ${ASCIIMATE_SOURCE_FILES})

# ADD_EXECUTABLE(${ASCIIMATE_TEST_EXEC_NAME} ${ASCIIMATE_TEST_SOURCE_FILES})

# ADD_CUSTOM_COMMAND(TARGET ${ASCIIMATE_TEST_EXEC_NAME} POST_BUILD COMMAND "${ASCIIMATE_BIN_PATH}/${ASCIIMATE_TEST_EXEC_NAME}")
# ADD_CUSTOM_TARGET(tests "${ASCIIMATE_BIN_PATH}/${ASCIIMATE_TEST_EXEC_NAME}" DEPENDS run_tests COMMENT "Running C tests...")

TARGET_LINK_LIBRARIES(${ASCIIMATE_EXEC_NAME} ncurses rt)
# TARGET_LINK_LIBRARIES(${ASCIIMATE_TEST_EXEC_NAME} check)

INSTALL(TARGETS ${ASCIIMATE_EXEC_NAME} DESTINATION /usr/bin)
